--- a/matriz_inversa_app.html
+++ b/matriz_inversa_app.html
@@ -212,7 +212,7 @@
   <header>
     <div class="pill">Matemáticas CCSS</div>
     <h1>Inversa de matrices</h1>
-    <p>Aplicación educativa para 2º de Bachillerato (Matemáticas aplicadas a CCSS). Incluye teoría, propiedades y un asistente interactivo para el método de Gauss–Jordan.</p>
+    <p>Web para 2º de Bachillerato (Matemáticas aplicadas a CCSS). Incluye teoría, propiedades y un asistente interactivo para el método de Gauss–Jordan.</p>
   </header>
 
   <main>
